--- a/public/css/style.css
+++ b/public/css/style.css
@@ -572,3 +572,74 @@ a.advert_create {
 a.advert_create:hover {
 	background: #e9e9ea;
 }
+.top li.dropdown {
+	list-style: none;
+	position: absolute;
+	right: 25px;
+	margin-top: 10px;
+	top: 0;
+}
+.top li.dropdown ul.dropdown-menu {
+	border: 0;
+	border-right: 1px solid #c0c0c0;
+	border-bottom: 1px solid #c0c0c0;
+	box-shadow: none;
+	margin-top: 10px;
+	padding-right: 20px;
+	right: 0;
+	left: initial;
+}
+.top li.dropdown ul.dropdown-menu li {
+	padding-left: 5px;
+}
+.top li.dropdown ul.dropdown-menu li a {
+	font-size: 12px;
+	color: #636465;
+	width: 100%;
+	padding: 4px 10px;
+	display: inline-block;
+}
+.my2-panel {
+	background: #f8f8f8;
+	border: 1px solid #e5e5e5;
+	border-top: 0;
+	border-bottom: 1px solid #b1b1b1;
+	box-shadow: 0px 2px 4px -2px #c0c0c0;
+	border-radius: 2px;
+}
+.form-group.max-50 .form-control {
+	max-width: 50%;
+}
+#comment-form form {
+	padding: 15px;
+}
+#comment-form h3 {
+	background: #f4f4f4;
+	color: #6e7185;
+	border-bottom: 1px solid #cbcbcb;
+	border-left: 1px solid #e4e4e4;
+	border-right: 1px solid #e4e4e4;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+	padding: 12px 20px;
+	margin: 0;
+	overflow: hidden;
+}
+#comment-form form .form-control {
+	color: #acabab;
+	font-size: 12px;
+	border-radius: 0;
+	border: 1px solid #cacaca;
+	resize: none;
+}
+#comment-form h3 .my-photo {
+	max-width: 50px;
+	float: left;
+	margin-right: 10px;
+}
+#comment-form h3 .my-photo img {
+	border-radius: 180px;
+}
+#comment-form h3 .f-title {
+	margin-top: 15px;
+}
