--- a/public/css/style.css
+++ b/public/css/style.css
@@ -911,7 +911,9 @@ body.error-404 #content .error-page a.reset {
 	margin-top: 50px;
 	display: inline-block;
 }
-
+.field-description img {
+	max-width: 100% !important;
+}
 @media (max-width: 767px) {
 	.head-t .site-slogan {
 		display: none;
